06_Microcontroller_Architecture/03_Lesson3/Lab2/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:55:21 **** Incremental Build of configuration Debug for project Lab2_STMCube ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:5:29: error: unknown type name 'uint_32'
 #define RCC_CR   *(volatile uint_32 *)(RCC_BASE + 0x00)
                             ^
../Src/main.c:11:2: note: in expansion of macro 'RCC_CR'
  RCC_CR |= 1<<0 ;
  ^~~~~~
../Src/main.c:6:30: error: unknown type name 'uint_32'
 #define RCC_CFGR  *(volatile uint_32 *)(RCC_BASE + 0x04)
                              ^
../Src/main.c:13:2: note: in expansion of macro 'RCC_CFGR'
  RCC_CFGR &= ~(0xFFFFFFFC);
  ^~~~~~~~
../Src/main.c:6:30: error: unknown type name 'uint_32'
 #define RCC_CFGR  *(volatile uint_32 *)(RCC_BASE + 0x04)
                              ^
../Src/main.c:15:2: note: in expansion of macro 'RCC_CFGR'
  RCC_CFGR &= ~(0xFFFFFF0F);
  ^~~~~~~~
../Src/main.c:6:30: error: unknown type name 'uint_32'
 #define RCC_CFGR  *(volatile uint_32 *)(RCC_BASE + 0x04)
                              ^
../Src/main.c:17:2: note: in expansion of macro 'RCC_CFGR'
  RCC_CFGR |= (0b100)<<8 ;
  ^~~~~~~~
../Src/main.c:6:30: error: unknown type name 'uint_32'
 #define RCC_CFGR  *(volatile uint_32 *)(RCC_BASE + 0x04)
                              ^
../Src/main.c:19:2: note: in expansion of macro 'RCC_CFGR'
  RCC_CFGR |= (0b101)<<11 ;
  ^~~~~~~~
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
10:55:58 **** Incremental Build of configuration Debug for project Lab2_STMCube ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "Lab2_STMCube.elf" @"objects.list"   -mcpu=cortex-m3 -T"J:\Embedded_Systems\Learn_In_Depth\Lab2\Lab2_STMCube\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Lab2_STMCube.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Lab2_STMCube.elf
 
arm-none-eabi-size   Lab2_STMCube.elf 
arm-none-eabi-objdump -h -S  Lab2_STMCube.elf  > "Lab2_STMCube.list"
arm-none-eabi-objcopy  -O binary  Lab2_STMCube.elf  "Lab2_STMCube.bin"
   text	   data	    bss	    dec	    hex	filename
    624	      8	   1568	   2200	    898	Lab2_STMCube.elf
Finished building: default.size.stdout
 
Finished building: Lab2_STMCube.bin
Finished building: Lab2_STMCube.list
 
 
